[package]
name = "lightbird"
version = "0.1.5"
authors = ["zhanglei.sec <zhanglei.sec@bytedance.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A light tool to get process/processors/memory/disks info."
repository = "https://github.com/ZhangLei-cn/lightbird"
[lib]
name = "lightbird"
path = "src/lib.rs"
doc = true
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"